---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "var _ : char(*)"
---
"_"@"src/main.t:4..5" [ConstVar(Var, No)]: char_n Any
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:8..15: invalid storage type
| error for src/main.t:8..15: cannot use `char(*)` in `var` declarations
| info: `char(*)`'s refer to character sequences that do not have a fixed size known at compile-time
